--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular/cli": "^1.5.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.3",
+    "@marsbased/marstyle-typescript": "^1.0.1",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^8.0.53",
